# maki

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md
packaging/: maki.desktop  shiori.desktop
packaging/aur/: .SRCINFO  PKGBUILD  publish.sh
packaging/flatpak/: dev.maki.Maki.yml  dev.shiori.Shiori.yml
patches/: foliate-js@0.0.0.patch
src/: App.tsx  ipc.ts  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: covers.rs  db.rs  error.rs  lib.rs  library.rs  models.rs  watch.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/bindings/: Annotation.ts  Book.ts  Bookmark.ts  ImportResult.ts  NewAnnotation.ts  NewBookmark.ts  WatchFolder.ts
src/components/: Cover.tsx  Dialog.tsx  Icon.tsx  ImportToast.tsx  ProgressRing.tsx  ShortcutsOverlay.tsx  Sidebar.tsx  SplashScreen.tsx  Titlebar.tsx
src/features/annotations/: AnnotationsSidebar.tsx  SelectionPopover.tsx  exportMarkdown.test.ts  exportMarkdown.ts
src/features/reader/: DisplayPopover.tsx  FoliateReader.tsx  ReaderPage.tsx  SearchPanel.tsx  TocSidebar.tsx  TypographyPanel.tsx  fonts.ts  readingSpeed.test.ts  readingSpeed.ts  themes.ts  useAutoScroll.ts
src/features/settings/: SettingsPage.tsx
src/i18n/: en.json  index.ts  ja.json
src/lib/: utils.ts
src/store/: app.ts  library.ts  settings.ts
src/types/: foliate-js.d.ts
