[workspace]
members = ["core"]

[package]
name = "maki"
version = "0.4.0"
description = "A beautiful, fast ebook reader for Linux"
authors = ["Maki contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ovyas24/maki"
edition = "2024"

[lib]
name = "maki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
maki-core = { path = "core" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
