[package]
name = "maki-core"
version = "0.4.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
notify = "8.2.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3.27.0"
